many minor updates, long time since commit. Most important update is that the coagulants are now presented as a list in a cell of the clinical info table

--- a/Source/debug.ipynb
+++ b/Source/debug.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "0252ccbf",
    "metadata": {},
    "outputs": [],
@@ -37,19 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "0e0b48a1",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "pt = Demographics(14, Castor())"
+    "pt = Demographics(16, Castor())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "7fe6e5de",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Patient ID = 015\n"
+      "Patient ID = 017\n"
      ]
     }
    ],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "80ad8f83",
    "metadata": {},
    "outputs": [
@@ -97,12 +97,16 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Age</th>\n",
-       "      <td>79</td>\n",
+       "      <th>Age (yrs)</th>\n",
+       "      <td>66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Type of surgery</th>\n",
        "      <td>Valve-Sparing Root Replacement (VSRR)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Weight (kg)</th>\n",
+       "      <td>66.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -110,11 +114,12 @@
       ],
       "text/plain": [
        "                                                      \n",
-       "Age                                                 79\n",
-       "Type of surgery  Valve-Sparing Root Replacement (VSRR)"
+       "Age (yrs)                                           66\n",
+       "Type of surgery  Valve-Sparing Root Replacement (VSRR)\n",
+       "Weight (kg)                                       66.5"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "id": "39f82538",
    "metadata": {},
    "outputs": [
@@ -164,7 +169,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "id": "d2aa088c",
    "metadata": {},
    "outputs": [
@@ -205,25 +210,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Current medication:</th>\n",
-       "      <td>Platelet inhibitors</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Stop medication, prior to surgery (hrs):</th>\n",
-       "      <td>48.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                             \n",
-       "Current medication:                       Platelet inhibitors\n",
-       "Stop medication, prior to surgery (hrs):                 48.0"
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "id": "ea2a59fa",
    "metadata": {},
    "outputs": [
@@ -265,20 +262,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Age</th>\n",
-       "      <td>79</td>\n",
+       "      <th>Age (yrs)</th>\n",
+       "      <td>66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Type of surgery</th>\n",
        "      <td>Valve-Sparing Root Replacement (VSRR)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Current medication:</th>\n",
-       "      <td>Platelet inhibitors</td>\n",
+       "      <th>Weight (kg)</th>\n",
+       "      <td>66.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Stop medication, prior to surgery (hrs):</th>\n",
-       "      <td>48.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -286,13 +283,13 @@
       ],
       "text/plain": [
        "                                                                               \n",
-       "Age                                                                          79\n",
+       "Age (yrs)                                                                    66\n",
        "Type of surgery                           Valve-Sparing Root Replacement (VSRR)\n",
-       "Current medication:                                         Platelet inhibitors\n",
-       "Stop medication, prior to surgery (hrs):                                   48.0"
+       "Weight (kg)                                                                66.5\n",
+       "Stop medication, prior to surgery (hrs):                                    0.0"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,8 +311,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "32145dc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pt.demograph_df\n",
+    "x = [\"beta-blockers\", \"thiopental\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d3eafae",
    "metadata": {},
    "outputs": [],
    "source": []
